# claudeometer

./: README.md  index.html  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  commands.rs  lib.rs
src/components/: UsageBar.tsx  WindowControls.tsx
src/lib/: types.ts
src/views/: Dashboard.tsx  Debug.tsx  Login.tsx  Settings.tsx  TrayMenu.tsx
